Ajustes do projeto

--- a/package.json
+++ b/package.json
@@ -4,5 +4,24 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3"
-  }
+  },
+  "name": "spotify",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CaioNovDev/EcomStudy.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/CaioNovDev/EcomStudy/issues"
+  },
+  "homepage": "https://github.com/CaioNovDev/EcomStudy#readme"
 }
