--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "svg-captcha": "^1.4.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.11.1"
   }
 }
